2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_thumbnail_image): same change
	here. Moved colorspace conversion to a utility function.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image): get rid of one of the
	temporary buffers. We don't need an alpha channel on the preview
	layer and we can do the CMYK->RGB conversion in place.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/iwarp.c (run): show the dialog when called with
	GIMP_RUN_WITH_LAST_VALS. This is better than just doing nothing
	when being called from the Repeat menu item (bug #480796).

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/add-bevel.scm: fixed GimpImageType
	parameter passed to gimp-layer-new. Do not register the script for
	grayscale images, it doesn't handle them properly.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c: unified error
	messages, removed trailing newlines.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: don't create nested undo groups.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimageundo.c (gimp_image_undo_pop): call
	gimp_color_managed_profile_changed() if an icc-profile is attached
	or removed from an image by an undo operation (bug #475983).

2007-09-26  Simon Budig  <simon@gimp.org>

	* app/display/gimpdisplayshell-render.c: fix the numerical overflow
	for the new box-filtering stuff.

	Fixes bug #479807.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/maze/maze_face.c (maze_dialog): use separate variables
	for width and height entry. Fixes bug #480303.

2007-09-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerwheel.c (gimp_controller_wheel_scroll):
	fixed check for modifier keys and always return on a matched
	event (bug #480319). Also reordered the list of events as the code
	does not any longer rely on a certain order.

2007-09-26  Sven Neumann  <sven@gimp.org>
